@@ -1,5 +1,6 @@
 package crml.translator;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -15,36 +16,36 @@ public class OperatorMapping {
 		//TODO add full operator list
 		
 		// Integer signatures
-		List<String> int1 = List.of("Integer");
-		List<String> int2 = List.of("Integer", "Integer");
+		List<String> int1 = Arrays.asList("Integer");
+		List<String> int2 = Arrays.asList("Integer", "Integer");
 		
 		
 		// Real signatures
-		List<String> real1 = List.of("Real");
-		List<String> real2 = List.of("Real", "Real");
+		List<String> real1 = Arrays.asList("Real");
+		List<String> real2 = Arrays.asList("Real", "Real");
 		
 		// Real + Int mix and match
-		List<String> intreal = List.of("Integer", "Real");
-		List<String> realint = List.of("Real", "Integer");
+		List<String> intreal = Arrays.asList("Integer", "Real");
+		List<String> realint = Arrays.asList("Real", "Integer");
 		
 		// Boolean signatures
-		List<String> bool1 = List.of("Boolean");
-		List<String> bool2 = List.of("Boolean", "Boolean");
+		List<String> bool1 = Arrays.asList("Boolean");
+		List<String> bool2 = Arrays.asList("Boolean", "Boolean");
 		
 		// String signatures
-		List<String> string2 = List.of("String", "String");
+		List<String> string2 = Arrays.asList("String", "String");
 		
 		// Period mix and match signatures
-		List<String> periodReal = List.of("Period", "Real");
-		List<String> realPeriod = List.of("Real", "Period");
+		List<String> periodReal = Arrays.asList("Period", "Real");
+		List<String> realPeriod = Arrays.asList("Real", "Period");
 		
 		// Default operand names in built-in functions
-		List<String> params = List.of("r1", "r2");
+		List<String> params = Arrays.asList("r1", "r2");
 		
 		
 		// + operators
 		List<Signature> plus_sigs = 
-				List.of(new Signature("+", int2, "Integer", Type.OPERATOR),
+				Arrays.asList(new Signature("+", int2, "Integer", Type.OPERATOR),
 						new Signature(" ", int1, "Integer", Type.OPERATOR),
 						new Signature("+", real2, "Real", Type.OPERATOR),
 						new Signature(" ", real1, "Real", Type.OPERATOR),
@@ -57,7 +58,7 @@ public class OperatorMapping {
 		
 		// - operators
 				List<Signature> minus_sigs = 
-						List.of(new Signature("-", int2, "Integer", Type.OPERATOR),
+						Arrays.asList(new Signature("-", int2, "Integer", Type.OPERATOR),
 								new Signature("-", int1, "Integer", Type.OPERATOR),
 								new Signature("-", real1, "Real", Type.OPERATOR),
 								new Signature("-", real2, "Real", Type.OPERATOR),
@@ -67,7 +68,7 @@ public class OperatorMapping {
 		
 		// * operators
 		List<Signature> mult_sigs = 
-				List.of(new Signature("*", int2, "Integer", Type.OPERATOR),
+				Arrays.asList(new Signature("*", int2, "Integer", Type.OPERATOR),
 						new Signature("*", real2, "Real", Type.OPERATOR),
 						new Signature("CRML.ETL.Evaluator.TemporalOperators.mul2x4", bool2, params, "Boolean", Type.FUNCTION));
 				
@@ -75,14 +76,14 @@ public class OperatorMapping {
 		
 		// / operators
 				List<Signature> div_sigs = 
-						List.of(new Signature("/", int2, "Integer", Type.OPERATOR),
+						Arrays.asList(new Signature("/", int2, "Integer", Type.OPERATOR),
 								new Signature("/", real2, "Real", Type.OPERATOR));
 						
 				built_in_operators.put("/", div_sigs);
 
 		// <= operators
 		List<Signature> leq_sigs = 
-				List.of(new Signature("<=", int2,  "Boolean", Type.OPERATOR),
+				Arrays.asList(new Signature("<=", int2,  "Boolean", Type.OPERATOR),
 						new Signature("<=", real2, "Boolean", Type.OPERATOR),
 						new Signature("<=", intreal, "Boolean", Type.OPERATOR),
 						new Signature("<=", realint, "Boolean", Type.OPERATOR),
@@ -91,44 +92,65 @@ public class OperatorMapping {
 		
 		built_in_operators.put("<=", leq_sigs);
 		
+		// <= operators
+				List<Signature> le_sigs = 
+						Arrays.asList(new Signature("<", int2,  "Boolean", Type.OPERATOR),
+								new Signature("<", real2, "Boolean", Type.OPERATOR),
+								new Signature("<", intreal, "Boolean", Type.OPERATOR),
+								new Signature("<", realint, "Boolean", Type.OPERATOR),
+								new Signature("CRML.realPeriodleq", realPeriod, params, "Boolean", Type.BLOCK),
+								new Signature("CRML.Blocks.Logical4.leq", bool2, params, "Boolean", Type.BLOCK));
+				
+				built_in_operators.put("<", le_sigs);
+		
 		// >= operators
 				List<Signature> geq_sigs = 
-						List.of(new Signature(">=", int2,  "Boolean", Type.OPERATOR),
+						Arrays.asList(new Signature(">=", int2,  "Boolean", Type.OPERATOR),
 								new Signature(">=", real2, "Boolean", Type.OPERATOR),
 								new Signature(">=", intreal, "Boolean", Type.OPERATOR),
 								new Signature(">=", realint, "Boolean", Type.OPERATOR),
 								new Signature("CRML.Blocks.Logical4.geq", bool2, params, "Boolean", Type.FUNCTION));
 				
 				built_in_operators.put(">=", geq_sigs);
+				
+				// >= operators
+				List<Signature> gr_sigs = 
+						Arrays.asList(new Signature(">", int2,  "Boolean", Type.OPERATOR),
+								new Signature(">", real2, "Boolean", Type.OPERATOR),
+								new Signature(">", intreal, "Boolean", Type.OPERATOR),
+								new Signature(">", realint, "Boolean", Type.OPERATOR),
+								new Signature("CRML.Blocks.Logical4.geq", bool2, params, "Boolean", Type.FUNCTION));
+				
+				built_in_operators.put(">", gr_sigs);
 
 		
 		// and operators		
 		built_in_operators.put("and", 
-				List.of(new Signature("CRML.Blocks.Logical4.and4", bool2, params, "Boolean", Type.FUNCTION)));
+				Arrays.asList(new Signature("CRML.Blocks.Logical4.and4", bool2, params, "Boolean", Type.FUNCTION)));
 		
 		// not operators		
 		built_in_operators.put("not", 
-				List.of(new Signature("CRML.Blocks.Logical4.not4", bool1, params, "Boolean", Type.FUNCTION)));
+				Arrays.asList(new Signature("CRML.Blocks.Logical4.not4", bool1, params, "Boolean", Type.FUNCTION)));
 		
 		// end operators	TODO proper implementation	
 				built_in_operators.put("end", 
-						List.of(new Signature("CRML.endP", List.of("Period"), params, "Real", Type.BLOCK)));
+						Arrays.asList(new Signature("CRML.endP", Arrays.asList("Period"), params, "Real", Type.BLOCK)));
 				built_in_operators.put("start", 
-						List.of(new Signature("CRML.startP", List.of("Period"), params, "Real", Type.BLOCK)));
+						Arrays.asList(new Signature("CRML.startP", Arrays.asList("Period"), params, "Real", Type.BLOCK)));
 		
 		// filter operator
 				built_in_operators.put("filter", 
-						List.of(new Signature("CRML.filterC", List.of("Clock", "Boolean"), params, "Clock", Type.BLOCK)));
+						Arrays.asList(new Signature("CRML.filterC", Arrays.asList("Clock", "Boolean"), params, "Clock", Type.BLOCK)));
 		
 		// card operator
 				built_in_operators.put("card", 
-						List.of(new Signature("CRML.cardClock", List.of("Clock"), params, "Integer", Type.BLOCK)));
+						Arrays.asList(new Signature("CRML.cardClock", Arrays.asList("Clock"), params, "Integer", Type.BLOCK)));
 		
 		// CONSTRUCTORS TODO finalize constructor table
 				
 		// String
 		List<Signature> string_sigs = 
-				List.of(new Signature("intToString", int1, params, "String", Type.FUNCTION),
+				Arrays.asList(new Signature("intToString", int1, params, "String", Type.FUNCTION),
 						new Signature("realToString", real1, params, "String", Type.FUNCTION));
 		
 				built_in_operators.put("String", string_sigs);
